# quadcopter_manual_control

./: CMakeLists.txt  package.xml
src/: quad_control.cpp  quad_multi_control-linux-SDL.cpp
